Some fixes.. debugging rewards not showing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -152,6 +152,9 @@ h1 {
 }
 
 .questions-container, .message {
+  background: rgba(48, 40, 40, 0.6);
+  border-radius: 25px;
+  padding: 16px;
   width: 500px;
   height: 400px;
   position: absolute;
